--- a/app/src/main/res/layout/activity_sistema.xml
+++ b/app/src/main/res/layout/activity_sistema.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="104dp"
         android:ems="10"
         android:hint="@string/dx"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#AEFFFFFF"
@@ -30,7 +30,7 @@
         android:layout_marginTop="104dp"
         android:ems="10"
         android:hint="@string/dx"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#AEFFFFFF"
@@ -45,7 +45,7 @@
         android:layout_marginTop="104dp"
         android:ems="10"
         android:hint="&quot;?&quot;"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#AEFFFFFF"
@@ -60,7 +60,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/dx"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#AEFFFFFF"
@@ -75,7 +75,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/dx"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#AEFFFFFF"
@@ -90,7 +90,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="&quot;?&quot;"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#AEFFFFFF"
@@ -169,12 +169,63 @@
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-    <EditText
-        android:id="@+id/editTextNumber"
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="117dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="64dp"
+        android:hint="Resultado"
+        android:text="Resultados"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="#AEFFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/B" />
+
+    <Button
+        android:id="@+id/btnCal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="286dp" />
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
+        android:text="Calcular"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <Button
+        android:id="@+id/btnLimpiar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
+        android:text="LIMPIAR"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCal" />
+
+    <TextView
+        android:id="@+id/fequis"
+        android:layout_width="44dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="64dp"
+        android:hint="X"
+        android:textAlignment="center"
+        android:textColorHint="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/D" />
+
+    <TextView
+        android:id="@+id/fDiegra"
+        android:layout_width="44dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="64dp"
+        android:hint="Y"
+        android:textAlignment="center"
+        android:textColorHint="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/fequis"
+        app:layout_constraintTop_toBottomOf="@+id/res2" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
