--- a/app/src/main/res/layout/activity_sistema.xml
+++ b/app/src/main/res/layout/activity_sistema.xml
@@ -189,6 +189,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="24dp"
+        android:background="@color/black"
+        android:fallbackLineSpacing="false"
+        android:hapticFeedbackEnabled="false"
         android:text="Calcular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
