--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,8 +107,10 @@
         android:layout_width="121dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
+        android:backgroundTint="@color/design_default_color_error"
         android:forceDarkAllowed="false"
         android:text="Entrar"
+        app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.293"
         app:layout_constraintStart_toStartOf="parent"
