--- a/app/src/main/res/layout/activity_cuadraticas.xml
+++ b/app/src/main/res/layout/activity_cuadraticas.xml
@@ -123,8 +123,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginTop="112dp"
-        android:background="@drawable/background"
+        android:backgroundTint="@color/teal_700"
+        android:fallbackLineSpacing="false"
+        android:hapticFeedbackEnabled="false"
         android:text="Calcular"
+        app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/A" />
 </androidx.constraintlayout.widget.ConstraintLayout>
