--- a/app/src/main/res/layout/activity_sistema.xml
+++ b/app/src/main/res/layout/activity_sistema.xml
@@ -190,9 +190,11 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="24dp"
         android:background="@color/black"
+        android:backgroundTint="@color/teal_200"
         android:fallbackLineSpacing="false"
         android:hapticFeedbackEnabled="false"
         android:text="Calcular"
+        app:cornerRadius="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
